# claude-oauth-auth

./: .bandit  .gitattributes  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  .yamllint.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: community.yml  docs-check.yml  performance.yml  publish.yml  quality.yml  security.yml  test-pypi.yml  test.yml
benchmarks/: README.md  RESULTS.md  bench_concurrent.py  bench_discovery.py  bench_init.py  bench_oauth.py  load_test.py
docs/: COMPATIBILITY_ANALYSIS.md  PERFORMANCE_ANALYSIS.md  README_AI_SCIENTIST_SECTION.md  advanced.md  ai_scientist_migration.md  api.md  architecture.md  authentication.md  changelog.md  examples.md  faq.md  guide.md  index.md  installation.md  migration.md  quickstart.md  troubleshooting.md  tutorial.md
examples/: README.md
examples/ai_scientist_integration/: README.md  integration.py  requirements.txt
examples/batch_processor/: README.md  processor.py  requirements.txt
examples/cli_tool/: README.md  claude_cli.py  requirements.txt
examples/docker/: .env.example  Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt
examples/fastapi_app/: README.md  main.py  requirements.txt
examples/flask_app/: README.md  app.py  requirements.txt
examples/jupyter/: README.md  claude_notebook.ipynb
examples/testing/: README.md  conftest.py  requirements.txt  test_with_claude.py
scripts/: bump_version.py  migrate_ai_scientist.py  troubleshoot.py
src/claude_oauth_auth/: __init__.py  __main__.py  auth_manager.py  cli.py  client.py  debug.py  oauth_manager.py  validate.py
tests/: README.md  __init__.py  conftest.py  test_auth_manager.py  test_auth_manager_coverage.py  test_client.py  test_client_coverage.py  test_init.py  test_integration.py  test_oauth_edge_cases.py  test_oauth_manager.py  test_performance.py
